fix some broken css vars

--- a/src-ui/src/app/components/dashboard/widgets/upload-file-widget/upload-file-widget.component.scss
+++ b/src-ui/src/app/components/dashboard/widgets/upload-file-widget/upload-file-widget.component.scss
@@ -35,5 +35,5 @@ form {
 }
 
 ::ng-deep .ngx-file-drop__drop-zone--over {
-  background-color: var(--ngx-primary-faded) !important;
+  background-color: var(--pngx-primary-faded) !important;
 }
